list product/part tickets
