# rest-api-spec.yaml
@@ -21,6 +21,44 @@ paths:
               schema:
                 $ref: '#/components/schemas/Tickets'
 
+        404:
+          $ref: '#/components/responses/NotFound'
+
+    post:
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                author_name:
+                  type: string
+                  example: "Pepe Java"
+                author_id:
+                  type: integer
+                  example: 4
+                product_name:
+                  type: string
+                  example: "belly jam"
+                product:
+                  type: integer
+                  example: 8
+                product_part:
+                  type: integer
+                  nullable: true
+                  example: 43
+                name:
+                  type: string
+                  example: 'ticket name'
+                descr:
+                  type: string
+                  example: 'ticket description is vety impotant because it gives us description of ticket. -stupid ball'
+
+      responses:
+        200:
+          description: OK
+
   /api/tickets/{id}:
     get:
       parameters:
@@ -38,6 +76,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/Ticket'
 
+        404:
+          $ref: '#/components/responses/NotFound'
+
   /api/tickets/{id}/comments:
     get:
       parameters:
@@ -54,6 +95,115 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Comments'
+
+        404:
+          $ref: '#/components/responses/NotFound'
+
+    post:
+      parameters:
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                author:
+                  type: integer
+                  example: 62
+                text:
+                  type: string
+                  example: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.'
+
+      responses:
+        200:
+          description: OK
+
+  /api/tickets/{id}/tasks:
+    get:
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Tasks'
+
+        404:
+          $ref: '#/components/responses/NotFound'
+
+    post:
+      parameters:
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                ticket:
+                  type: integer
+                  example: 53
+                author:
+                  type: integer
+                  example: 4
+                name:
+                  type: string
+                  example: 'task name'
+                descr:
+                  type: string
+                  example: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.'
+                ewt:
+                  type: integer
+                  example: 12
+
+      responses:
+        200:
+          description: OK
+
+  /api/tickets/{id}/tasks/{t_id}:
+    get:
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+        - in: path
+          name: t_id
+          required: true
+          schema:
+            type: integer
+
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Task'
+
+        404:
+          $ref: '#/components/responses/NotFound'
 
   /api/products:
     get:
@@ -206,41 +356,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tickets'
-    post:
-      parameters:
-      - in: path
-        name: id_product
-        required: true
-        schema:
-            type: integer
-            example: 42
-
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                product:
-                  type: integer
-                  example: 1
-                product_part:
-                  type: integer
-                  example: null
-                author:
-                  type: integer
-                  example: 42
-                name:
-                  type: string
-                  example: 'New ticket name'
-                descr:
-                  type: string
-                  example: null
-      description: State will be set to 'OPEN' by default.
-      responses:
-        200:
-          description: OK
 
   /api/users:
     get:
@@ -349,12 +464,9 @@ components:
         ticket:
           type: integer
           example: 42
-        author_id:
+        author:
           type: integer
           example: 89
-        author_nickname:
-          type: string
-          example: 'Durr maan'
         name:
           type: string
           example: 'Task: create user database'
@@ -373,14 +485,11 @@ components:
         created:
           type: string
           example: '2000-10-26 15:03:58'
-        employee_id:
-          type: integer
-          example: 90
-        employee_name:
+        employee:
           type: string
           example: 'guy working on this task'
 
-    TaskList:
+    Tasks:
       type: array
       items:
         allOf:
@@ -464,11 +573,31 @@ components:
     UserList:
       type: array
       items:
-        type: object
-        properties:
-          id:
-            type: integer
-            example: 10
-          name:
-            type: string
-            example: 'John Cena'
+        allOf:
+        - type: object
+          properties:
+            id:
+              type: integer
+              example: 10
+            name:
+              type: string
+              example: 'John Cena'
+
+    Error:
+      type: object
+      properties:
+        code:
+          type: string
+        message:
+          type: string
+      required:
+        - code
+        - message
+
+  responses:
+    NotFound:
+      description: The specified resource was not found
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
